--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Awax</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<header>
+		<div class="container-fluid">
+			<div class="hero">
+				<nav class="nav">
+					<div>
+						<img src="images/Logo.png">
+					</div>
+					<ul>
+						<li>home</li>
+						<li>about us</li>
+						<li>services</li>
+						<li>our projects</li>
+						<li>our team</li>
+						<li>happy clients</li>
+						<li>price</li>
+						<li>some facts</li>
+						<li>contact us</li>
+					</ul>
+				</nav>
+				<div class="slogan">
+					<h1>Design is about<br><span style="color: #b88b58">communication</span></h1>
+					<p>Call us: +00 0 1234 5678</p>
+					<button>get in touch!</button>
+					<img src="/images/Paginator.png">
+				</div>
+			</div>
+		</div>
+	</header>
 </body>
 </html>
