--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="hero">
 				<nav class="nav">
 					<div>
-						<img src="images/Logo.png">
+						<img class="logo" src="images/Logo.png" alt="logo">
 					</div>
 					<ul>
 						<li>home</li>
@@ -32,10 +32,58 @@
 					<h1>Design is about<br><span style="color: #b88b58">communication</span></h1>
 					<p>Call us: +00 0 1234 5678</p>
 					<button>get in touch!</button>
-					<img src="/images/Paginator.png">
+					<img class="dots" src="/images/Paginator.png" alt="paginator">
 				</div>
 			</div>
 		</div>
 	</header>
+	<section class="about">
+		<div class="container-fluid">
+			<img class="phone" src="/images/Telephone.png" alt="phone-button">
+			<h2>About Us</h2>
+			<h3>Who we are?</h3>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-7">
+						<p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. Mauris volutpat vitae risus sed pellentesque. Praesent fermentum neque ac tellus gravida, at varius sem accumsan. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus.</p>
+						<button>Learn more</button>
+					</div>
+					<div class="col-lg-5">
+						<img src="/images/Video.png" alt="video">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="services">
+		<div class="container-fluid">
+			<h2>Services</h2>
+			<h3>Services that we provide</h3>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-3 icon">
+						<img src="/images/Quality.png" alt="quality">
+						<h4>High quality<br>design</h4>
+						<P>Praesent metus urna, feugiata placerat elementum</P>
+					</div>
+					<div class="col-lg-3 icon">
+						<img src="/images/Star.png" alt="star">
+						<h4>Modern design</h4>
+						<P>Praesent metus urna, feugiata placerat elementum</P>
+					</div>
+					<div class="col-lg-3 icon">
+						<img src="/images/Clock.png" alt="clock">
+						<h4>Regular<br>update</h4>
+						<P>Praesent metus urna, feugiata placerat elementum</P>
+					</div>
+					<div class="col-lg-3 icon">
+						<img src="/images/Support.png" alt="support">
+						<h4>Fast and free<br>support</h4>
+						<P>Praesent metus urna, feugiata placerat elementum</P>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
