add section projects

--- a/index.html
+++ b/index.html
@@ -85,5 +85,114 @@
 			</div>
 		</div>
 	</section>
+	<section class="projects">
+		<div class="container-fluid">
+			<h2>Our projects</h2>
+			<h3>What we create</h3>
+			<ul>
+				<li>All</li>
+				<li>Photos</li>
+				<li>Branding</li>
+				<li>Adverts</li>
+				<li>Development</li>
+				<li>Misc</li>
+			</ul>
+			<div class="portfolio">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img1.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img2.jpg">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img3.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img4.png">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img5.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img6.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img7.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img8.png">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img9.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img10.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img11.png">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img12.png">
+						</div>
+					</div>
+				</div>
+			</div>
+			<button>More projects</button>
+		</div>
+	</section>
 </body>
 </html>
