add section team and client

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Awax</title>
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -105,58 +106,28 @@
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img1.png">
+							<img src="/images/Img1.png" alt="img1">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img2.jpg">
+							<img src="/images/Img2.jpg" alt="img2">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img3.png">
+							<img src="/images/Img3.png" alt="img3">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img4.png">
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-lg-3">
-							<div class="layer">
-								<h4>About</h4>
-								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-							</div>
-							<img src="/images/Img5.png">
-						</div>
-						<div class="col-lg-3">
-							<div class="layer">
-								<h4>About</h4>
-								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-							</div>
-							<img src="/images/Img6.png">
-						</div>
-						<div class="col-lg-3">
-							<div class="layer">
-								<h4>About</h4>
-								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-							</div>
-							<img src="/images/Img7.png">
-						</div>
-						<div class="col-lg-3">
-							<div class="layer">
-								<h4>About</h4>
-								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
-							</div>
-							<img src="/images/Img8.png">
+							<img src="/images/Img4.png" alt="img4">
 						</div>
 					</div>
 					<div class="row">
@@ -165,33 +136,133 @@
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img9.png">
+							<img src="/images/Img5.png" alt="img5">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img10.png">
+							<img src="/images/Img6.png" alt="img6">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img11.png">
+							<img src="/images/Img7.png" alt="img7">
 						</div>
 						<div class="col-lg-3">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
-							<img src="/images/Img12.png">
+							<img src="/images/Img8.png" alt="img8">
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img9.png" alt="img9">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img10.png" alt="img10">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img11.png" alt="img11">
+						</div>
+						<div class="col-lg-3">
+							<div class="layer">
+								<h4>About</h4>
+								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
+							</div>
+							<img src="/images/Img12.png" alt="img12">
 						</div>
 					</div>
 				</div>
 			</div>
 			<button>More projects</button>
+		</div>
+	</section>
+	<section class="team">
+		<div class="container-fluid">
+			<h2>Our team</h2>
+			<h3>Our co-workers</h3>
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-4">
+						<div class="person">
+							<img src="/images/Img_team_1.png" alt="person1">
+							<h3>Jane Doe</h3>
+							<p>Master mind</p>
+							<div class="socials">
+								<i class="fab fa-twitter"></i>
+								<i class="fab fa-instagram"></i>
+								<i class="fab fa-linkedin-in"></i>
+								<i class="fab fa-facebook-f"></i>
+								<i class="fab fa-youtube"></i>
+								<i class="fab fa-google-plus-g"></i>
+								<i class="fas fa-ellipsis-h"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="person">
+							<img src="/images/Img_team_2.png" alt="person2">
+							<h3>Mike Shiller</h3>
+							<p>Creative head</p>
+							<div class="socials">
+								<i class="fab fa-twitter"></i>
+								<i class="fab fa-instagram"></i>
+								<i class="fab fa-linkedin-in"></i>
+								<i class="fab fa-facebook-f"></i>
+								<i class="fab fa-youtube"></i>
+								<i class="fab fa-google-plus-g"></i>
+								<i class="fas fa-ellipsis-h"></i>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4">
+						<div class="person">
+							<img src="/images/Img_team_3.png" alt="person3">
+							<h3>Anna Johns</h3>
+							<p>Technical lead</p>
+							<div class="socials">
+								<i class="fab fa-twitter"></i>
+								<i class="fab fa-instagram"></i>
+								<i class="fab fa-linkedin-in"></i>
+								<i class="fab fa-facebook-f"></i>
+								<i class="fab fa-youtube"></i>
+								<i class="fab fa-google-plus-g"></i>
+								<i class="fas fa-ellipsis-h"></i>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img class="dots" src="/images/Paginator.png" alt="dots">
+		</div>
+	</section>
+	<section class="clients">
+		<div class="container-fluid">
+			<h2>Happy clients</h2>
+			<h3>Client reviews</h3>
+			<img src="/images/Img_client.png" alt="client">
+			<h4>John Doe</h4>
+			<p>Head Of PR Departament</p>
+			<img class="quotes" src="/images/quotes.png" alt="quotes">
+			<p class="opinion">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus</p>	
 		</div>
 	</section>
 </body>
