add price and logos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 					<h1>Design is about<br><span style="color: #b88b58">communication</span></h1>
 					<p>Call us: +00 0 1234 5678</p>
 					<button>get in touch!</button>
-					<img class="dots" src="/images/Paginator.png" alt="paginator">
+				</div>
+				<div class="dots">
+						<img src="/images/Paginator.png" alt="dots">
 				</div>
 			</div>
 		</div>
@@ -251,7 +253,9 @@
 					</div>
 				</div>
 			</div>
-			<img class="dots" src="/images/Paginator.png" alt="dots">
+		</div>
+		<div class="dots">
+			<img src="/images/Paginator.png" alt="dots">
 		</div>
 	</section>
 	<section class="clients">
@@ -262,7 +266,102 @@
 			<h4>John Doe</h4>
 			<p>Head Of PR Departament</p>
 			<img class="quotes" src="/images/quotes.png" alt="quotes">
-			<p class="opinion">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus</p>	
+			<p class="opinion">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus</p>
+		</div>
+		<div class="dots">
+			<img src="/images/Paginator.png" alt="dots">
+		</div>
+		<div class="logos">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-2">
+						<img src="/images/Logo_1.png" alt="logo1">
+					</div>
+					<div class="col-lg-2">
+						<img src="/images/Logo_2.png" alt="logo2">
+					</div>
+					<div class="col-lg-2">
+						<img src="/images/Logo_3.png" alt="logo3">
+					</div>
+					<div class="col-lg-2">
+						<img src="/images/Logo_4.png" alt="logo4">
+					</div>
+					<div class="col-lg-2">
+						<img src="/images/Logo_5.png" alt="logo5">
+					</div>
+					<div class="col-lg-2">
+						<img src="/images/Logo_6.png" alt="logo6">
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="prices">
+		<div class="container-fluid">
+			<h2>Price</h2>
+			<h3>Pricing table</h3>
+			<div class="offers">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-3">
+							<div class="offer">
+								<h4>Express</h4>
+								<p class="price"><span>$ 9.99</span><br>/ month</p>
+								<p class="description">
+									Tracking issues<br>—<br>
+									Add bugs through email<br>—<br>
+									Notifications<br>—<br>
+									Time tracking<br>—<br>
+									Custom views
+								</p>
+								<button>Choose</button>
+							</div>
+						</div>
+						<div class="col-lg-3">
+							<div class="offer">
+								<h4>Standart</h4>
+								<p class="price"><span>$ 14.99</span><br>/ month</p>
+								<p class="description">
+									Tracking issues<br>—<br>
+									Add bugs through email<br>—<br>
+									Notifications<br>—<br>
+									Time tracking<br>—<br>
+									Custom views
+								</p>
+								<button>Choose</button>
+							</div>
+						</div>
+						<div class="col-lg-3">
+							<div class="offer">
+								<h4>Luxe</h4>
+								<p class="price"><span>$ 19.99</span><br>/ month</p>
+								<p class="description">
+									Tracking issues<br>—<br>
+									Add bugs through email<br>—<br>
+									Notifications<br>—<br>
+									Time tracking<br>—<br>
+									Custom views
+								</p>
+								<button>Choose</button>
+							</div>
+						</div>
+						<div class="col-lg-3">
+							<div class="offer">
+								<h4>Premium</h4>
+								<p class="price"><span>$ 24.99</span><br>/ month</p>
+								<p class="description">
+									Tracking issues<br>—<br>
+									Add bugs through email<br>—<br>
+									Notifications<br>—<br>
+									Time tracking<br>—<br>
+									Custom views
+								</p>
+								<button>Choose</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
