create premium and facts section, begin contact

--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
 					<p>Call us: +00 0 1234 5678</p>
 					<button>get in touch!</button>
 				</div>
-				<div class="dots">
-						<img src="/images/Paginator.png" alt="dots">
-				</div>
+				<img src="/images/Paginator.png" alt="dots" class="dots">
 			</div>
 		</div>
 	</header>
@@ -254,9 +252,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="dots">
-			<img src="/images/Paginator.png" alt="dots">
-		</div>
+		<img src="/images/Paginator.png" alt="dots" class="dots">
 	</section>
 	<section class="clients">
 		<div class="container-fluid">
@@ -268,9 +264,7 @@
 			<img class="quotes" src="/images/quotes.png" alt="quotes">
 			<p class="opinion">Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus</p>
 		</div>
-		<div class="dots">
-			<img src="/images/Paginator.png" alt="dots">
-		</div>
+		<img src="/images/Paginator.png" alt="dots" class="dots">
 		<div class="logos">
 			<div class="container">
 				<div class="row">
@@ -362,6 +356,104 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</section>
+	<section class="premium">
+		<div class="container-fluid">
+			<h2>Premium</h2>
+			<h3>Even More Features Available</h3>
+			<div class="features">
+				<div class="container">
+					<div class="row">
+						<div class="col-lg-5">
+							<img src="/images/Img.png">
+						</div>
+						<div class="col-lg-6">
+							<div>
+								<img src="/images/icon.png">
+								<h4>First Feature</h4>
+								<p>Praesent metus urna, feugiat a placerat vel, elementum at leo.<br>
+								 Quisque vel fermentum ipsum.
+								 Nulla at facilisis est.<br>
+								 — FEATURE ONE<br>
+								 — FEATURE TWO<br>
+	    						 — FEATURE THREE</p>
+	    					</div>
+	    					<div>
+								<img src="/images/icon.png">
+								<h4>Second Feature</h4>
+								<p>Praesent metus urna, feugiat a placerat vel.</p>
+	    					</div>
+	    					<div>
+								<img src="/images/icon.png">
+								<h4>Third Feature</h4>
+								<p>Praesent metus urna, feugiat a placerat vel, elementum at leo.</p>
+	    					</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<img src="/images/Paginator.png" alt="dots" class="dots">
+			<button>Get in touch</button>
+		</div>
+	</section>
+	<section class="facts">
+		<div class="container-fluid">
+			<h2>Some facts</h2>
+			<h3>About our work</h3>
+			<div class="container">
+				<div class="row details">
+					<div class="col-lg-2 detail">
+						<h4>1000</h4>-
+						<h5>Design project released</h5>
+						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
+					</div>
+					<div class="col-lg-2 detail">
+						<h4>900</h4>-
+						<h5>Photos</h5>
+						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
+					</div>
+					<div class="col-lg-2 detail">
+						<h4>500</h4>-
+						<h5>Marketing<br>ideas</h5>
+						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
+					</div>
+					<div class="col-lg-2 detail">
+						<h4>100</h4>-
+						<h5>Exhibitions</h5>
+						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
+					</div>
+				</div>
+			</div>
+			<div class="socials">
+				<img src="/images/Share.png">
+				<p>Tell about us:</p>
+				<i class="fab fa-twitter"></i>152
+				<i class="fab fa-linkedin-in"></i>31
+				<i class="fab fa-facebook-f"></i>165
+				<i class="fab fa-google-plus-g"></i>22
+				<i class="fab fa-pinterest-p"></i>165
+			</div>
+		</div>
+	</section>
+	<section class="contact">
+		<div class="container-fluid">
+			<h2>CONTACT US</h2>
+			<h3>our agency located in Melbourne, Australia</h3>
+			<form>
+				<div class="form-group row">
+					<label for="name" class="col-6">Name</label>
+					<input type="text">
+					<label for="email" class="col-6">Email</label>
+					<input type="text">
+				</div>
+				<div class="form-group row">
+					<label for="subject" class="col-12">Subject</label>
+					<input type="text">
+					<label for="message" class="col-12">Message</label>
+					<input type="text">
+				</div>
+			</form>
 		</div>
 	</section>
 </body>
