--- a/index.html
+++ b/index.html
@@ -442,19 +442,62 @@
 			<h3>our agency located in Melbourne, Australia</h3>
 			<form>
 				<div class="form-group row">
-					<label for="name" class="col-6">Name</label>
-					<input type="text">
-					<label for="email" class="col-6">Email</label>
-					<input type="text">
+					<div class="col-lg-5">
+						<input type="text" value="Name" class="personal">
+					</div>
+					<div class="col-lg-5">
+						<input type="text" value="Email" class="personal">
+					</div>
 				</div>
 				<div class="form-group row">
-					<label for="subject" class="col-12">Subject</label>
-					<input type="text">
-					<label for="message" class="col-12">Message</label>
-					<input type="text">
+					<div class="col-lg-11">
+						<input type="text" value="Subject" class="topic">
+					</div>
+				</div>
+				<div class="form-group row">
+					<div class="col-lg-11">
+						<input type="text" value="Message" class="topic">
+					</div>
 				</div>
 			</form>
+			<button>Send Message</button>
+			<div class="map">
+				<div class="info">
+					<p><i class="far fa-envelope"></i>PO Box 16122 Collins Street West Victoria 8007 Australia</p>
+					<p><i class="fas fa-map-marker-alt"></i>121 King Street, Melbourne Victoria 3000 Australia</p>
+					<p><i class="fas fa-phone"></i>+00 0 1234 5678</p>
+					<p><i class="fas fa-at"></i>bukindesign@gmail.com</p>
+					<p><i class="fas fa-globe"></i>www.envato.com</p>
+				</div>
+			</div>
 		</div>
 	</section>
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-4">
+					<div class="social_links">
+						<i class="fab fa-twitter"></i>
+						<i class="fab fa-instagram"></i>
+						<i class="fab fa-linkedin-in"></i>
+						<i class="fab fa-facebook-f"></i>
+						<i class="fab fa-youtube"></i>
+						<i class="fab fa-google-plus-g"></i>
+						<i class="fas fa-ellipsis-h"></i>
+						<p class="copyright">Awax © 2018</p>
+					</div>
+				</div>
+				<div class="col-lg-4">
+					<p class="text">Nulla iaculis enim a magna tempor congue. Sed aliquam dignissim hendrerit. Duis erat nulla, pellentesque at enim in, scelerisque placerat nunc. Nulla vestibulum ex sed neque auctor rutrum. Donec fringilla tincidunt aliquet. Nullam rhoncus urna massa, vulputate congue velit pulvinar suscipit. Mauris laoreet blandit pharetra. Suspendisse rutrum dolor at augue convallis, eget dapibus nunc consequat. Sed diam nulla, elementum non laoreet eu,vulputate urna, at pellentesque risus orci in ante.</p>
+				</div>
+				<div class="col-lg-4">
+					<div class="subscribe">
+						<input type="text" name="mail" value="Email to subscribe">
+						<button>Subscribe</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
