starting working on media queries

--- a/index.html
+++ b/index.html
@@ -40,16 +40,16 @@
 	</header>
 	<section class="about">
 		<div class="container-fluid">
-			<img class="phone" src="/images/Telephone.png" alt="phone-button">
+			<i class="fas fa-phone"></i>
 			<h2>About Us</h2>
 			<h3>Who we are?</h3>
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-7">
+					<div class="col-lg-7 col-md-12">
 						<p>Praesent metus urna, feugiat a placerat vel, elementum at leo. Quisque vel fermentum ipsum. Nulla at facilisis est, vel condimentum ligula. Mauris volutpat vitae risus sed pellentesque. Praesent fermentum neque ac tellus gravida, at varius sem accumsan. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus. Nam porta erat id sapien consectetur. Fusce sed purus eros. Vivamus rhoncus, ipsum in tempus fermentum, orci leo facilisis purus.</p>
 						<button>Learn more</button>
 					</div>
-					<div class="col-lg-5">
+					<div class="col-lg-5 col-md-12">
 						<img src="/images/Video.png" alt="video">
 					</div>
 				</div>
@@ -62,22 +62,22 @@
 			<h3>Services that we provide</h3>
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-3 icon">
+					<div class="col-lg-3 col-md-6 icon">
 						<img src="/images/Quality.png" alt="quality">
 						<h4>High quality<br>design</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
-					<div class="col-lg-3 icon">
+					<div class="col-lg-3 col-md-6 icon">
 						<img src="/images/Star.png" alt="star">
 						<h4>Modern design</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
-					<div class="col-lg-3 icon">
+					<div class="col-lg-3 col-md-6 icon">
 						<img src="/images/Clock.png" alt="clock">
 						<h4>Regular<br>update</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
 					</div>
-					<div class="col-lg-3 icon">
+					<div class="col-lg-3 col-md-6 icon">
 						<img src="/images/Support.png" alt="support">
 						<h4>Fast and free<br>support</h4>
 						<P>Praesent metus urna, feugiata placerat elementum</P>
@@ -101,28 +101,28 @@
 			<div class="portfolio">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img1.png" alt="img1">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img2.jpg" alt="img2">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img3.png" alt="img3">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
@@ -131,28 +131,28 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img5.png" alt="img5">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img6.png" alt="img6">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img7.png" alt="img7">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
@@ -161,28 +161,28 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img9.png" alt="img9">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img10.png" alt="img10">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
 							</div>
 							<img src="/images/Img11.png" alt="img11">
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-6">
 							<div class="layer">
 								<h4>About</h4>
 								<p>Praesent metus urna, feugiata<br>placerat elementum at leo</p>
@@ -201,7 +201,7 @@
 			<h3>Our co-workers</h3>
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-12">
 						<div class="person">
 							<img src="/images/Img_team_1.png" alt="person1">
 							<h3>Jane Doe</h3>
@@ -217,7 +217,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-12">
 						<div class="person">
 							<img src="/images/Img_team_2.png" alt="person2">
 							<h3>Mike Shiller</h3>
@@ -233,7 +233,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4">
+					<div class="col-lg-4 col-md-12">
 						<div class="person">
 							<img src="/images/Img_team_3.png" alt="person3">
 							<h3>Anna Johns</h3>
@@ -268,22 +268,22 @@
 		<div class="logos">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_1.png" alt="logo1">
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_2.png" alt="logo2">
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_3.png" alt="logo3">
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_4.png" alt="logo4">
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_5.png" alt="logo5">
 					</div>
-					<div class="col-lg-2">
+					<div class="col-lg-2 col-md-4 col-sm-6">
 						<img src="/images/Logo_6.png" alt="logo6">
 					</div>
 				</div>
@@ -297,7 +297,7 @@
 			<div class="offers">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-12">
 							<div class="offer">
 								<h4>Express</h4>
 								<p class="price"><span>$ 9.99</span><br>/ month</p>
@@ -311,7 +311,7 @@
 								<button>Choose</button>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-12">
 							<div class="offer">
 								<h4>Standart</h4>
 								<p class="price"><span>$ 14.99</span><br>/ month</p>
@@ -325,7 +325,7 @@
 								<button>Choose</button>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-12">
 							<div class="offer">
 								<h4>Luxe</h4>
 								<p class="price"><span>$ 19.99</span><br>/ month</p>
@@ -339,7 +339,7 @@
 								<button>Choose</button>
 							</div>
 						</div>
-						<div class="col-lg-3">
+						<div class="col-lg-3 col-md-6 col-sm-12">
 							<div class="offer">
 								<h4>Premium</h4>
 								<p class="price"><span>$ 24.99</span><br>/ month</p>
@@ -365,10 +365,10 @@
 			<div class="features">
 				<div class="container">
 					<div class="row">
-						<div class="col-lg-5">
+						<div class="col-lg-5 col-md-12 col-sm-12">
 							<img src="/images/Img.png">
 						</div>
-						<div class="col-lg-6">
+						<div class="col-lg-6 col-md-12 col-sm-12">
 							<div>
 								<img src="/images/icon.png">
 								<h4>First Feature</h4>
@@ -403,22 +403,22 @@
 			<h3>About our work</h3>
 			<div class="container">
 				<div class="row details">
-					<div class="col-lg-2 detail">
+					<div class="col-lg-2 col-md-6 col-sm-12 detail">
 						<h4>1000</h4>-
 						<h5>Design project released</h5>
 						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
 					</div>
-					<div class="col-lg-2 detail">
+					<div class="col-lg-2 col-md-6 col-sm-12 detail">
 						<h4>900</h4>-
 						<h5>Photos</h5>
 						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
 					</div>
-					<div class="col-lg-2 detail">
+					<div class="col-lg-2 col-md-6 col-sm-12 detail">
 						<h4>500</h4>-
 						<h5>Marketing<br>ideas</h5>
 						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
 					</div>
-					<div class="col-lg-2 detail">
+					<div class="col-lg-2 col-md-6 col-sm-12 detail">
 						<h4>100</h4>-
 						<h5>Exhibitions</h5>
 						<p>Praesent metus urna, feugiata placerat elementum at leo</p>
@@ -475,7 +475,7 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="social_links">
 						<i class="fab fa-twitter"></i>
 						<i class="fab fa-instagram"></i>
@@ -487,10 +487,10 @@
 						<p class="copyright">Awax © 2018</p>
 					</div>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<p class="text">Nulla iaculis enim a magna tempor congue. Sed aliquam dignissim hendrerit. Duis erat nulla, pellentesque at enim in, scelerisque placerat nunc. Nulla vestibulum ex sed neque auctor rutrum. Donec fringilla tincidunt aliquet. Nullam rhoncus urna massa, vulputate congue velit pulvinar suscipit. Mauris laoreet blandit pharetra. Suspendisse rutrum dolor at augue convallis, eget dapibus nunc consequat. Sed diam nulla, elementum non laoreet eu,vulputate urna, at pellentesque risus orci in ante.</p>
 				</div>
-				<div class="col-lg-4">
+				<div class="col-lg-4 col-md-12 col-sm-12">
 					<div class="subscribe">
 						<input type="text" name="mail" value="Email to subscribe">
 						<button>Subscribe</button>
